# JaxHouseMaze

./: .gitignore  LICENSE  README.md  example.ipynb  image_data.pkl  levels.py  list_of_groups.npy  maze.py  pyproject.toml  renderer.py  requirements.txt  setup.py  utils.py
housemaze/: env.py  maze.py  renderer.py  utils.py
housemaze/human_dyna/: categories.yaml  env.py  experiments.py  mazes.py  multitask_env.py  sf_task_runner.py  utils.py  web_env.py
jaxhousemaze/: maze.py  renderer.py  utils.py
